2014-06-26  Karl Berry  <karl@gnu.org>

	* Makefile (tex4ht_fonts_noncjk_derived): evidently lm-htf.tex
	is created from tex4ht-fonts-noncjk.tex, but not cmtex.htf.
	Don't see where/how cmtex.htf is created.

2014-05-22  Karl Berry  <karl@gnu.org>

	* tex4ht-4ht.tex (shared url): must use definition
	of \set@mathnolig from previous url.sty, since we must
	use literal _ rather than \sb for tex4ht.  (From CVR.)

2014-02-21  Karl Berry  <karl@gnu.org>

	* tex4ht-html4.tex (font-size): need \%, not %, for the 70%.
	Found by Raphael Pinson, http://puszcza.gnu.org.ua/bugs/?189.

2014-02-10  Karl Berry  <karl@gnu.org>

	* tex4ht-env.tex: use gs instead of convert for making bitmaps
	(from dick, + notes).
	
	* tex4ht-env.tex: use %%~ or ~ instead of hardwired gurari dir.

2013-10-07  Karl Berry  <karl@gnu.org>

	* Makefile (tex4ht-fonts-{cjk,cjk-utf8,noncjk}*): new targets and vars.
	* tex4ht-fonts-noncjk.tex: do not generate cjk and cjk-utf8.
	* tex4ht-fonts-cjk-utf8.tex: copyright update.

2013-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex4ht-c.tex, tex4ht-t4ht.tex: Always include system headers
	after <kpathsea/config.h>.  (Backport from TeX Live.)

2013-03-01  Radhakrishnan CV  <cvr@river-valley.org>

	* tex4ht-ooffice.tex: \NoFonts ... \EndNoFonts added in
	{footnotetext} configuration to avoid font size anomalies in
	footnotes when footnote text has accented characters. Patch
	submitted by Nicolai Rostov, Feb 28, 2013 at 4:40 AM.

2013-01-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Backport from TeX Live.
	* tex4ht-c.tex, tex4ht-t4ht.tex: Drop set but unused variables.

2012-07-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to W32TeX (backport from TeX Live).
	* tex4ht-c.tex, tex4ht-t4ht.tex [WIN32]:
	Use binary mode for output files.
	Pass program name string to kpse_set_program_name.
	Must not free argv.

2011-09-18  Karl Berry  <karl@gnu.org>

	* tex4ht-unicode.tex (<double acute code>): \H{O} is 0150,